# Magical_comfy

./: README.md  main.py  pyproject.toml  requirements.txt
src/: main.py  route.py
src/assets/: GGUF_WORKFLOW_API.json  configs.json  normal_workflow.json
src/components/: Image_component.py  chat_containers.py  connection_indicator.py  image_component.py  setting_containers.py  status_containers.py  value_slider_containers.py
src/containers/setting/: container.py
src/services/: client_services.py  generation_services.py  setting_services.py
src/utils/: event_bus.py  ultis.py
src/views/: gallery_view.py  main_view.py  setting_view.py
