[project]
name = "magical_comfy"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "anyio==4.12.1 ; python_full_version >= '3.9' and platform_system != 'Pyodide'",
  "anyio==4.5.2 ; python_full_version < '3.9' and platform_system != 'Pyodide'",
  "certifi==2026.1.4 ; platform_system != 'Pyodide'",
  "cfgv==3.4.0 ; python_full_version < '3.10'",
  "cfgv==3.5.0 ; python_full_version >= '3.10'",
  "colorama==0.4.6 ; sys_platform == 'win32'",
  "dacite==1.9.2",
  "distlib==0.4.0",
  "exceptiongroup==1.3.1 ; python_full_version < '3.11' and platform_system != 'Pyodide'",
  "filelock==3.16.1 ; python_full_version < '3.9'",
  "filelock==3.19.1 ; python_full_version == '3.9.*'",
  "filelock==3.20.3 ; python_full_version >= '3.10'",
  "flet==0.25.2",
  "h11==0.16.0 ; platform_system != 'Pyodide'",
  "httpcore==1.0.9 ; platform_system != 'Pyodide'",
  "httpx==0.28.1 ; platform_system != 'Pyodide'",
  "identify==2.6.1 ; python_full_version < '3.9'",
  "identify==2.6.15 ; python_full_version >= '3.9'",
  "idna==3.11 ; platform_system != 'Pyodide'",
  "loguru==0.7.3",
  "nodeenv==1.10.0",
  "oauthlib==3.3.1 ; platform_system != 'Pyodide'",
  "pip==25.0.1 ; python_full_version < '3.9'",
  "pip==25.3 ; python_full_version >= '3.9'",
  "pip>=25.0.1",
  "platformdirs==4.3.6 ; python_full_version < '3.9'",
  "platformdirs==4.4.0 ; python_full_version == '3.9.*'",
  "platformdirs==4.5.1 ; python_full_version >= '3.10'",
  "pre-commit==3.5.0 ; python_full_version < '3.9'",
  "pre-commit==4.3.0 ; python_full_version == '3.9.*'",
  "pre-commit==4.5.1 ; python_full_version >= '3.10'",
  "pre-commit>=3.5.0",
  "pyyaml==6.0.3",
  "repath==0.9.0",
  "six==1.17.0",
  "sniffio==1.3.1 ; python_full_version < '3.9' and platform_system != 'Pyodide'",
  "typing-extensions==4.13.2 ; python_full_version < '3.9'",
  "typing-extensions==4.15.0 ; (python_full_version >= '3.9' and python_full_version < '3.13' and platform_system != 'Pyodide') or (python_full_version >= '3.9' and python_full_version < '3.11' and platform_system == 'Pyodide')",
  "virtualenv==20.36.1",
  "websocket-client==1.8.0 ; python_full_version < '3.9'",
  "websocket-client==1.9.0 ; python_full_version >= '3.9'",
  "websocket-client>=1.8.0",
  "win32-setctime==1.2.0 ; sys_platform == 'win32'",
]


[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "magical_comfy"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2024 by Flet"

[tool.flet.app]
path = "src"
